add filters to base
incorporate common filters into base adaptor

Issue-ID: CCSDK-1849
Signed-off-by: Smokowski, Kevin (ks6305) <kevin.smokowski@att.com>
Change-Id: Ib1de49f29ff88c0f8cff87642ae60dc11517331b